[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["lingalo <bokova.nast@yandex.ru>"]
readme = "README.md"
packages = [{include = "games"}]


[tool.poetry.dependencies]
python = "^3.8.1"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "games.scripts.brain_games:main"
brain-even = "games.scripts.brain_even:main"
brain-calc = "games.scripts.brain_calc:main"
brain-gcd = "games.scripts.brain_gcd:main"
brain-progression = "games.scripts.brain_progression:main"
brain-prime = "games.scripts.brain_prime:main"